# AzeotropyDistillation

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
core/: equilibrium.py  peng_robinson.py  protocols.py  saturation.py  wilson.py  z_factor.py
core/vle/: datasets.py  types.py
data/: component_registry.py  methanol_data.py  parameters.py
generators/: generate_ternary_surface.py  plot_ternary_surface.py
plotting/: ternary_temperature_map.py
ui/: app.py
