[project]
name = "distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet==0.80.5",
    "flet-webview>=0.80.5",
    "numpy>=2.4.2",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
    "typing-extensions>=4.15.0",
]
